---
source: server/zenith/test/media.rs
expression: "app.get(\"/items?ids[]=1&ids[]=4&ids[]=7&ids[]=9\").await"
---
[
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 1,
    "name": "Test Movie 1",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "movie",
    "user_data": {
      "is_watched": false,
      "last_watched_at": 1662911415,
      "position": 50.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 1,
      "path": "/path/to/Test Movie 1/Test Movie 1.mp4",
      "streams": [
        {
          "codec": "h264",
          "height": 1080,
          "id": 1,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 2,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 4,
    "name": "Test Show 1",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "show",
    "user_data": {
      "type": "collection",
      "unwatched": 4
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 7,
    "name": "Season 1",
    "overview": null,
    "parent": {
      "id": 4,
      "index": 1,
      "name": "Test Show 1"
    },
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "season",
    "user_data": {
      "type": "collection",
      "unwatched": 2
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "grandparent": {
      "id": 4,
      "index": 1,
      "name": "Test Show 1"
    },
    "id": 9,
    "name": "Episode 1",
    "overview": null,
    "parent": {
      "id": 7,
      "index": 1,
      "name": "Season 1"
    },
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "episode",
    "user_data": {
      "is_watched": false,
      "last_watched_at": null,
      "position": 0.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 4,
      "path": "/path/to/Test Episode 1",
      "streams": [
        {
          "codec": "h264",
          "height": 1080,
          "id": 7,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 8,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  }
]
